# fastapi-ddd-kafka-example

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
app/application/api/: lifespan.py  main.py  schemas.py
app/application/api/messages/: filters.py  handlers.py  schemas.py
app/application/api/messages/websockets/: messages.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/integrations/notifications/clients/: base.py  telegram.py
app/infra/message_brokers/: base.py  converters.py  kafka.py
app/infra/repositories/: messages.py
app/infra/repositories/filters/: messages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/infra/websockets/: managers.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py  messages.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/logic/mediator/: base.py  command.py  event.py  query.py
app/logic/queries/: base.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.dev.yaml  app.yaml  kafka.yaml  mongo-express.yaml  mongo.yaml  storages.yaml
