[tool.poetry]
name = "ddd-api"
version = "0.1.0"
description = ""
authors = ["Sergey <one6sergey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
motor = "^3.5.0"
uvicorn = "^0.30.1"
pytest = "^8.2.2"
faker = "^26.0.0"
black = "^24.4.2"
pytest-asyncio = "^0.23.7"
punq = "^0.7.0"
httpx = "^0.27.0"
pydantic-settings = "^2.3.4"
aiokafka = "^0.11.0"
aiojobs = "^1.3.0"
orjson = "^3.10.6"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
